--- a/server/Makefile
+++ b/server/Makefile
@@ -1,10 +1,20 @@
 CC = gcc
-CFLAGS = -pthread
-BIN = server
-OBJ = server.o
+CFLAGS = -std=c11 -D_DEFAULT_SOURCE -O2 -Wall -Wextra -g -Iinclude
+LDFLAGS = -pthread
 
-%.o: %c
-	$(CC) -c $(CFLAGS) $< -o $@
+SRCS = src/main.c src/client.c src/match.c src/game.c src/logging.c
+OBJS = $(SRCS:.c=.o)
+TARGET = server.exe
 
-$(BIN): $(OBJ)
-	$(CC) $^ -o $@
+.PHONY: all clean
+
+all: $(TARGET)
+
+$(TARGET): $(OBJS)
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
+
+clean:
+	rm -f $(OBJS) $(TARGET)
