--- a/client/pom.xml
+++ b/client/pom.xml
@@ -18,9 +18,12 @@
     <maven.compiler.release>17</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <classes.output.dir>${project.basedir}/out</classes.output.dir>
+    <project.source.dir>${project.basedir}</project.source.dir>
   </properties>
 
   <build>
+    <sourceDirectory>${project.source.dir}</sourceDirectory>
+
     <plugins>
       <!-- Compiler plugin: compile to release level and write classes to ./out -->
       <plugin>
@@ -33,7 +36,7 @@
         </configuration>
       </plugin>
 
-      <!-- Jar plugin: set Main-Class in manifest for java -jar -->
+      <!-- Jar plugin: set Main-Class in manifest for java -jar (optional) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -48,7 +51,7 @@
         </configuration>
       </plugin>
 
-      <!-- Exec plugin: run the main class via `mvn exec:java` and include ./out -->
+      <!-- Exec plugin: run the main class via `mvn exec:java` and include ./out on runtime classpath -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -56,7 +59,6 @@
         <configuration>
           <mainClass>ChessClientGUI</mainClass>
           <classpathScope>runtime</classpathScope>
-          <addClasspath>true</addClasspath>
           <additionalClasspathElements>
             <additionalClasspathElement>${classes.output.dir}</additionalClasspathElement>
           </additionalClasspathElements>
